--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "use-interval": "^1.4.0"
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.20.3",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
     "prettier": "^2.0.5"
   },
   "scripts": {
